# LittleOne

./: .gitignore  README.md  RELEASE_ANLEITUNG.md  START_RELEASE.cmd  SquirrelExeTutorial.txt  ToDo.txt  Worktime.txt  _tmp_task_probe.py  pyproject.toml  requirements.txt
assets/: README.txt
config/: default.yaml  flighthub2.json  flighthub2.json.example
data/Locations/: Rehkitz_Fundort.csv
data/aim_M3/: Gebietsroute-erstellen11.kmz  Template_M3.kml
data/aim_M4/: Gebietsroute-erstellen1.kmz  template_dezipped.kml
data/start/: 2299_files.kml  2299_files.kmz  S123_e6d87e0a84674ec19e836aa14c1a259d_KML (10).kmz  S123_e6d87e0a84674ec19e836aa14c1a259d_KML (13).kmz  S123_e6d87e0a84674ec19e836aa14c1a259d_KML (9).kml  S123_e6d87e0a84674ec19e836aa14c1a259d_KML (9).kmz
out_kmz_layout/: test-001.kmz
scripts/: build_gui_exe.ps1  build_win_exe.ps1  check_lxml.py  debug_kml_bytes.py  debug_kml_chars.py  export_arcgis_feature_layer.py  inspect_2299.py  release_assistent.ps1  release_new_version.ps1  release_silent.ps1  run_ui.ps1  scan_kmz.py  squirrel_releasify.ps1  try_parse_2299.py
src/: main.py  ui_app.py
src/LittleOne/: cli.py  dji_rules.py  kml_writer.py  kmz_reader.py  optimize_angle.py  tiling.py
src/LittleOne.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kitzkmz/: dji_rules.py
tests/: kmz_reader_test.py  kmz_reader_test_run.py  test_smoke.py
