[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LittleOne"
version = "0.2.3"
description = "KMZ→KML-Formatter (DJI Pilot 2) mit GUI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastkml>=1.4",
  "pygeoif>=1.6",
  "shapely>=2.0",
  "typer>=0.12"
]

[project.scripts]
kmz2dji = "LittleOne.cli:app"

